--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -1,1 +1,14 @@
-<% include ../layout  %>
+<% layout('layout') %>
+
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-3">Welcome to Ale-Store</h1>
+      <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron
+        and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+      <p>
+        <% if(!user) { %>
+          <a class="btn btn-primary btn-lg" href="/register" role="button">Register &raquo;</a>
+          <% } %>
+      </p>
+    </div>
+  </div>
