--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -1,1 +1,35 @@
-<h1>navbar</h1>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+	<a class="navbar-brand" href="/">Ale-Store</a>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
+	 aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+
+	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
+		<ul class="navbar-nav mr-auto">
+
+		</ul>
+		<ul class="navbar-nav navbar-right">
+			<% if(!user) { %>
+				<li class="nav-item">
+					<a class="nav-link" href="/register">
+						Register
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/login">login</a>
+				</li>
+				<% } else { %>
+					<li class="nav-item">
+						<a class="nav-link" href="/profile">
+							<%= user.profile.name %>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/logout">Logout</a>
+					</li>
+				<% } %>
+
+		</ul>
+	</div>
+</nav>
