products page added

--- a/views/accounts/account-layout.ejs
+++ b/views/accounts/account-layout.ejs
@@ -11,8 +11,7 @@
 	<title>Signin Template for Bootstrap</title>
 
 	<!-- Bootstrap core CSS -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
-	 crossorigin="anonymous">
+	<link rel="stylesheet" href="/css/bootswatch.superhero.min.css">
 
 	<!-- Custom styles for this template -->
 	<link href="/css/signin.css" rel="stylesheet">
