--- a/views/main/products.ejs
+++ b/views/main/products.ejs
@@ -20,7 +20,7 @@
 			<% for (var i=0; i < products.length; i++) { %>
 				<div class="col-md-4 mb-3">
 					<div class="card">
-						<img class="card-img-top" src="<%= products[i].image %>" alt="Card image cap">
+						<!-- <img class="card-img-top" src="<%= products[i].image %>" alt="Card image cap"> -->
 						<div class="card-body">
 							<h5 class="card-title">
 								<%= products[i].name %>
@@ -38,30 +38,29 @@
 				<% } %>
 		</div>
 	</div>
+	<%= currPage %>
 
-	<nav aria-label="Page navigation example" id="pagination">
-		<ul class="pagination justify-content-center">
-			<% for(var i=0; i<page; i++) { %>
-				<% if(currPage===1) { %>
-					<li class="page-item disabled">
-						<a class="page-link" href="#" aria-label="Previous">
-							<span aria-hidden="true">&laquo;</span>
-							<span class="sr-only">Previous</span>
-						</a>
-					</li>
-					<% } else { %>
-						<li class="page-item">
-							<a class="page-link" href="/page/<%= i %>">
-								<%= i %>
+		<nav aria-label="Page navigation example" id="pagination">
+			<ul class="pagination justify-content-center">
+				<% for(var i=0; i<page; i++) { %>
+					<% if(currPage===0) { %>
+						<li class="page-item disabled">
+							<a class="page-link" href="#" aria-label="Previous">
+								<span aria-hidden="true">&laquo;</span>
+								<span class="sr-only">Previous</span>
 							</a>
 						</li>
-						<% } %>
-							<% } %>
-								<li class="page-item">
-									<a class="page-link" href="#" aria-label="Next">
-										<span aria-hidden="true">&raquo;</span>
-										<span class="sr-only">Next</span>
-									</a>
-								</li>
-		</ul>
-	</nav>
+						<% } else { %>
+							<% if(currPage == (i+1)) { %>
+								<li class="page-item disabled">
+									<% } else { %>
+										<li class="page-item">
+											<% } %>
+												<a class="page-link" href="/page/<%= i+1 %>">
+													<%= i+1 %>
+												</a>
+										</li>
+										<% } %>
+											<% } %>
+			</ul>
+		</nav>
