--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -32,6 +32,14 @@
 						</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="/">
+							<i class="fas fa-shopping-cart"></i>
+							<span class="badge badge-light">
+								<%= cart %>
+							</span>
+						</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="/logout">Logout</a>
 					</li>
 					<% } %>
