--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -1,7 +1,8 @@
 <% layout('accounts/account-layout') %>
 
 	<form class="form-signin" method="post" action="/login">
-		<h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
+		<a class="btn btn-lg ale-store" href="/">Ale-Store</a>
+		<h1 class="h3 mb-3 font-weight-normal" style="color: #7952b3">Please Login</h1>
 		<label for="inputEmail" class="sr-only">Email address</label>
 		<input type="email" id="inputEmail" name='email' class="form-control" placeholder="Email address" required autofocus>
 		<label for="inputPassword" class="sr-only">Password</label>
