--- a/views/accounts/register.ejs
+++ b/views/accounts/register.ejs
@@ -11,8 +11,8 @@
 					</button>
 			</div>
 			<% } %>
-				<a href="/">Ale-Store</a>
-				<h1 class="h3 mb-3 font-weight-normal">Please Register</h1>
+				<a class="btn btn-lg ale-store" href="/">Ale-Store</a>
+				<h1 class="h3 mb-3 font-weight-normal" style="color: #7952b3">Please Register</h1>
 				<label for="username" class="sr-only">Username * </label>
 				<input type="text" id="username" class="form-control" placeholder="Username * " required name="username">
 				<label for="inputEmail" class="sr-only">Email address *</label>
