--- a/views/main/product.ejs
+++ b/views/main/product.ejs
@@ -3,7 +3,8 @@
 	<div class="container product-page">
 		<div class="row">
 			<div class="col-md-5">
-				<img class="w-100 h-auto" src="<%= product.image %>" alt="No photo available">
+				<!-- <img class="w-100 h-auto" src="<%= product.image %>" alt="No photo available"> -->
+				<img src="https://imgplaceholder.com/430x325/2b3e50/ffffff/fa-file-image-o" alt="">
 			</div>
 			<div class="col-md-7 product-info">
 				<form method="POST">
