--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -32,7 +32,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="/">
+						<a class="nav-link" href="/cart">
 							<i class="fas fa-shopping-cart"></i>
 							<span class="badge badge-light">
 								<%= cart %>
