--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -33,6 +33,7 @@ input:read-only:focus {
 	margin: 20px 0;
 	padding: 20px;
 	min-height: 105px;
+	background-color: #4e5d6c;
 }
 
 .cart-item--image {
@@ -48,4 +49,45 @@ input:read-only:focus {
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
+}
+
+.credit-card-box .panel-title {
+	display: inline;
+	font-weight: bold;
+}
+.credit-card-box .form-control.error {
+	border-color: red;
+	outline: 0;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
+}
+.credit-card-box label.error {
+	font-weight: bold;
+	color: red;
+	padding: 2px 8px;
+	margin-top: 2px;
+}
+.credit-card-box .payment-errors {
+	font-weight: bold;
+	color: red;
+	padding: 2px 8px;
+	margin-top: 2px;
+}
+.credit-card-box label {
+	display: block;
+}
+/* The old "center div vertically" hack */
+.credit-card-box .display-table {
+	display: table;
+}
+.credit-card-box .display-tr {
+	display: table-row;
+}
+.credit-card-box .display-td {
+	display: table-cell;
+	vertical-align: middle;
+	width: 50%;
+}
+/* Just looks nicer */
+.credit-card-box .panel-heading img {
+	min-width: 180px;
 }
