--- a/views/main/product.ejs
+++ b/views/main/product.ejs
@@ -16,14 +16,16 @@
 					</div>
 
 					<div class="btn-group" role="group" aria-label="Basic example">
-						<button type="button" class="btn btn-secondary"> - </button>
-						<button type="button" class="btn btn-secondary disabled ">0</button>
-						<button type="button" class="btn btn-secondary"> + </button>
+						<button type="button" class="btn btn-secondary" id='minus'> - </button>
+						<button type="button" class="btn btn-secondary disabled " id="total">1</button>
+						<button type="button" class="btn btn-secondary" id="plus"> + </button>
 					</div>
 
 					<div class="form-group">
 						<input type="hidden" id="productId" name="id" value="<%= product._id %>" />
 						<input type="hidden" id="product_price" name="price" value='<%= product.price %>' />
+						<input type="hidden" id='quantity' name="quantity" value="1">
+						<input type="hidden" id="totalHidden" name="totalMoney" value="<%= product.price %>">
 
 					</div>
 
