--- a/views/main/products.ejs
+++ b/views/main/products.ejs
@@ -19,7 +19,7 @@
 		<div class="row" id="search_result">
 			<% for (var i=0; i < products.length; i++) { %>
 				<div class="col-md-4 mb-3">
-					<div class="card">
+					<div class="card item-holder">
 						<!-- <img class="card-img-top" src="<%= products[i].image %>" alt="Card image cap"> -->
 						<img src="https://imgplaceholder.com/330x300/2b3e50/ffffff/fa-file-image-o?font-size=88">
 						<div class="card-body">
