--- a/views/accounts/profile.ejs
+++ b/views/accounts/profile.ejs
@@ -28,36 +28,62 @@
 	<div class="row justify-content-center">
 		<a class="btn btn-primary" href="/profile/edit" role="button">Edit profile</a>
 	</div>
-	<h2 class="text-success">
-		Purchase history:
-	</h2>
+
 	<div class="row">
-		<table class="table table-bordered">
-			<thead>
-				<tr>
-					<th scope="col">#</th>
-					<th scope="col">Item's Name</th>
-					<th scope="col">Paid</th>
-					<th scope="col">Date</th>
-				</tr>
-			</thead>
-			<tbody>
-				<% for(var i=0; i<user.history.length; i++) { %>
-					<tr>
-						<th scope="row">
-							<%= i %>
-						</th>
-						<td>
-							<%= user.history[i].item.name  %>
-						</td>
-						<td>
-							<%= user.history[i].paid %>
-						</td>
-						<td>
-							<%= user.history[i].date %>
-						</td>
-					</tr>
+		<% if(user.userType == 'customer') { %>
+			<h2 class="text-success">
+				Purchase history:
+			</h2>
+			<% if(user.history.length != 0) { %>
+				<table class="table table-bordered">
+					<thead>
+						<tr>
+							<th scope="col">#</th>
+							<th scope="col">Item's Name</th>
+							<th scope="col">Paid</th>
+							<th scope="col">Date</th>
+						</tr>
+					</thead>
+					<tbody>
+						<% for(var i=0; i<user.history.length; i++) { %>
+							<tr>
+								<th scope="row">
+									<%= i %>
+								</th>
+								<td>
+									<%= user.history[i].item.name  %>
+								</td>
+								<td>
+									<%= user.history[i].paid %>
+								</td>
+								<td>
+									<%= user.history[i].date %>
+								</td>
+							</tr>
+							<% } %>
+					</tbody>
+				</table>
+				<% } else { %>
+					<div class="text-warning">
+						You have not purchased any items yet!
+					</div>
 					<% } %>
-			</tbody>
-		</table>
+						<% } %>
+							<%= customers %>
+								<% if(user.userType == 'admin') { %>
+									<table class="table table-bordered">
+										<thead>
+											<tr>
+												<th scope="col">#</th>
+												<th scope="col">User Name</th>
+												<th scope="col">Product Name</th>
+												<th scope="col">Paid</th>
+												<th scope="col">Date</th>
+											</tr>
+										</thead>
+										<tbody>
+										</tbody>
+									</table>
+									<% } %>
+
 	</div>
