--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -26,23 +26,33 @@
 					<a class="nav-link" href="/login">login</a>
 				</li>
 				<% } else { %>
-					<li class="nav-item">
-						<a class="nav-link" href="/profile">
-							<%= user.profile.name %>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/cart">
-							<i class="fas fa-shopping-cart"></i>
-							<span class="badge badge-light">
-								<%= cart %>
-							</span>
-						</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/logout">Logout</a>
-					</li>
-					<% } %>
+					<% if(user.userType == 'admin') { %>
+						<li class="nav-item">
+							<a class="nav-link" href="/admin/product/add">
+								Add a product
+							</a>
+						</li>
+						<% } %>
+							<li class="nav-item">
+								<a class="nav-link" href="/profile">
+									<%= user.profile.name %>
+										<% if(user.userType == 'admin') { %>
+											<span class="badge badge-success">Admin</span>
+											<% } %>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/cart">
+									<i class="fas fa-shopping-cart"></i>
+									<span class="badge badge-info">
+										<%= cart %>
+									</span>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="/logout">Logout</a>
+							</li>
+							<% } %>
 
 		</ul>
 	</div>
