--- a/views/accounts/profile-edit.ejs
+++ b/views/accounts/profile-edit.ejs
@@ -14,7 +14,7 @@
 					 required>
 				</div>
 				<div class="form-group">
-					<label for="address">Address</label>
+					<label for="address">Shipping address</label>
 					<input type="text" class="form-control" name="address" value="<%= user.address ? user.address : '' %>" id="address" placeholder="Address">
 				</div>
 				<div class="row justify-content-center">
