--- a/views/main/category.ejs
+++ b/views/main/category.ejs
@@ -4,13 +4,16 @@
 			<% for (var i=0; i < products.length; i++) { %>
 				<div class="col-md-4 mb-3">
 					<div class="card">
-						<img class="card-img-top" src="<%= products[i].image %>" alt="Card image cap">
+						<img src="https://imgplaceholder.com/330x300/2b3e50/ffffff/fa-file-image-o?font-size=88">
 						<div class="card-body">
 							<h5 class="card-title">
 								<%= products[i].name %>
 							</h5>
 							<p class="card-text">
-								<%= products[i].category.name %>
+								Category:
+								<span class="badge badge-pill badge-light">
+									<%= products[i].category.name %>
+								</span>
 							</p>
 							<p class="card-text">
 								<%= products[i].price %> &euro;
