--- a/views/main/product.ejs
+++ b/views/main/product.ejs
@@ -15,29 +15,50 @@
 						<%= product.price %> &euro;
 					</div>
 
-					<div class="btn-group" role="group" aria-label="Basic example">
-						<button type="button" class="btn btn-secondary" id='minus'> - </button>
-						<button type="button" class="btn btn-secondary disabled " id="total">1</button>
-						<button type="button" class="btn btn-secondary" id="plus"> + </button>
-					</div>
-
-					<div class="form-group">
-						<input type="hidden" id="productId" name="id" value="<%= product._id %>" />
-						<input type="hidden" id="product_price" name="price" value='<%= product.price %>' />
-						<input type="hidden" id='quantity' name="quantity" value="1">
-						<input type="hidden" id="totalHidden" name="totalMoney" value="<%= product.price %>">
-
-					</div>
-
 					<div>
-						<% if(user) { %>
-							<button type="submit" class="btn btn-primary btn-lg">Add to cart</button>
-							<% } else { %>
-								<a href="/login" class="btn btn-warning btn-lg">Login</a>
-								<% } %>
+						Inventory(quantity of this product in the store):
+						<span class="badge badge-primary">
+							<%= product.inventory %>
+						</span>
 					</div>
+
+					<input type="hidden" id="inventory" name="inventory" value="<%= product.inventory %>">
+
+					<% if(product.inventory >= 1) { %>
+						<div class="btn-group" role="group" aria-label="Basic example">
+							<button type="button" class="btn btn-secondary" id='minus'> - </button>
+							<button type="button" class="btn btn-secondary disabled " id="total">1</button>
+							<button type="button" class="btn btn-secondary" id="plus"> + </button>
+						</div>
+						<div class="text-danger not-enough"></div>
+
+						<div class="form-group">
+							<input type="hidden" id="productId" name="id" value="<%= product._id %>" />
+							<input type="hidden" id="product_price" name="price" value='<%= product.price %>' />
+							<input type="hidden" id='quantity' name="quantity" value="1">
+							<input type="hidden" id="totalHidden" name="totalMoney" value="<%= product.price %>">
+
+						</div>
+
+						<div>
+							<% if(user) { %>
+								<% if(user.userType != 'admin') { %>
+									<button type="submit" class="btn btn-primary btn-lg">Add to cart</button>
+									<% } %>
+
+										<% } else { %>
+											<a href="/login" class="btn btn-warning btn-lg">Login to add to cart</a>
+											<% } %>
+						</div>
+						<% } else { %>
+							<div class="text-danger not-enough">This product is not available in the store right now.</div>
+							<% } %>
+
+								<% if(user.userType == 'admin') { %>
+									<a href="/admin/product/edit/<%= product._id.toString() %>" class="btn btn-warning btn-lg">Edit</a>
+									<% } %>
+
 				</form>
 			</div>
-
 		</div>
 	</div>
