--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -41,18 +41,20 @@
 											<% } %>
 								</a>
 							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="/cart">
-									<i class="fas fa-shopping-cart"></i>
-									<span class="badge badge-info">
-										<%= cart %>
-									</span>
-								</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="/logout">Logout</a>
-							</li>
-							<% } %>
+							<% if(user.userType != 'admin') { %>
+								<li class="nav-item">
+									<a class="nav-link" href="/cart">
+										<i class="fas fa-shopping-cart"></i>
+										<span class="badge badge-info">
+											<%= cart %>
+										</span>
+									</a>
+								</li>
+								<% } %>
+									<li class="nav-item">
+										<a class="nav-link" href="/logout">Logout</a>
+									</li>
+									<% } %>
 
 		</ul>
 	</div>
